# ComfyUI-HMT-Suite

./: .gitignore  LICENSE  README.md  __init__.py  config.json  pyproject.toml  server_routes.py
.claude/: settings.local.json
.github/workflows/: publish.yml
examples/: workflow_batch_download.json  workflow_clone_repository.json  workflow_custom_node_installer.json  workflow_download_checkpoint.json  workflow_download_github_file.json  workflow_install_and_restart.json  workflow_restart_comfyui.json
nodes/: __init__.py  comfyui_restart.py  comfyui_updater.py  custom_node_installer.py  model_downloader.py
nodes/komfy/: README.md  __init__.py  komfy_aspect_ratio.py  komfy_boolean.py  komfy_float.py  komfy_integer.py  komfy_string.py
utils/: __init__.py  auto_updater.py  custom_node_installer.py  downloader.py  github_handler.py  resource_discovery.py  updater.py
